Fix: Separate css for bookings to fix style bleed

--- a/booking/static/booking/css/booking.css
+++ b/booking/static/booking/css/booking.css
@@ -1,52 +1,3 @@
-/* Date picker */
-#ui-datepicker-div {
-    background-color: black;
-    width: 15em;
-}
-
-.ui-datepicker-header a {
-    color: #d4c248;
-    font-weight: 400;
-    text-decoration: none;
-}
-
-.ui-datepicker-header a:hover {
-    color: #d4c248;
-    font-weight: 600;
-    cursor: pointer;
-}
-
-.ui-datepicker-calendar {
-    color: white;
-}
-
-.ui-datepicker-month {
-    color: white;
-}
-
-.ui-datepicker-year {
-    color: white;
-}
-
-a.ui-datepicker-next {
-    float: right;
-}
-
-.ui-datepicker-today a {
-    background-color: #d4c248;
-    color: white;
-}
-
-td a {
-    color: white;
-    text-decoration: none;
-}
-
-td a:hover {
-    background-color: #d4c248;
-    text-decoration: none;
-}
-
 /* 
 Generic Styling, for Desktops/Laptops
 Code gotten from CSS Tricks
@@ -97,7 +48,7 @@ td a {
 }
 
 @media 
-only screen and (max-width: 760px),
+only screen and (max-width: 767px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
 
 	/* Force table to not be like tables anymore */
